--- a/src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml
+++ b/src/Controls/KarveControls/DriverUserControl/DriverUserControl.xaml
@@ -21,7 +21,10 @@
             <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
       
-        <karveControls:DualFieldSearchBox DataFieldFirst="CONDUCTOR_CON1"
+        <karveControls:DualFieldSearchBox 
+            IsReadOnlyFirst="True"
+            IsReadOnlySecond="True"
+            DataFieldFirst="CONDUCTOR_RES1"
                                                       Grid.Row="0"
                                                      x:Name="Driver"
                                                       AssistTableName="DRIVER_ASSIST_2"
@@ -29,12 +32,14 @@
                                                       LabelText="Conductor"
                                                       LabelTextWidth="86"   
                                                       Margin="0,5,0,0"
-                                                      IsReadOnlySecond="True"
+                                                     
+                                                      IsMagnifierVisible="Collapsed"
                                                       TextContentFirstWidth="100"
                                                       TextContentSecondWidth="220"
+                                                      
                                                       MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                                      SourceView="{Binding DriverDto2, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      SourceView="{Binding DriverDto2, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <karveControls:DataField LabelText="{Binding lnombre, Source={StaticResource ResourceLanguage}}"
@@ -75,7 +80,7 @@
                                                       TextContentSecondWidth="100"
                                                       MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                       ItemChangedCommand="{Binding ItemChangedCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                                      SourceView="{Binding DriverCountryList, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                                                      SourceView="{Binding DriverCountryList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                                       DataSource="{Binding DataObject, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
         </Grid>
 
@@ -96,9 +101,9 @@
                                                                   Web="{Binding ElementName=Driver, Path=SelectedObject.WEB}"
                                                                   MagnifierCommand="{Binding AssistCommand, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                                                                   MinWidth="400"
-                                                                  ProvinceSourceView="{Binding ProvinceDto3, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                                                  CountrySourceView="{Binding CountryDto3, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                                                                  CitySourceView="{Binding CityDto3, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  ProvinceSourceView="{Binding ProvinceDto3, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  CountrySourceView="{Binding CountryDto3, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                                  CitySourceView="{Binding CityDto3, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, PresentationTraceSources.TraceLevel=High}"
                                                                   ItemChangedCommand="{Binding ItemChangedCommand}"></karveControls:DirectionInfo>
         <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
@@ -116,7 +121,7 @@
             </Grid.RowDefinitions>
             <Label Content="Fecha caducidad NIF" Grid.Row="0"  HorizontalAlignment="Left" />
             <DatePicker HorizontalAlignment="Left" SelectedDate="{Binding Path=DataObject.FCADUNIFCOND_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Row="0" x:Name="fCADUNIFCOND_RES2" Width="284" Margin="133,1,0,29" Grid.RowSpan="2" Grid.ColumnSpan="2" />
-            <Label Content="Lugar de Nascimiento" Grid.Row="1" Width="125" HorizontalAlignment="Left" />
+            <TextBlock Text="Lugar Nasc." Grid.Row="1" Width="125" HorizontalAlignment="Left" />
             <Grid Grid.Column="1" Grid.Row="1" Margin="0,0,-4,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="71"/>
@@ -176,7 +181,7 @@
                 </Grid.ColumnDefinitions>
 
                 <DatePicker SelectedDate="{Binding Path=DataObject.FEEXPE_RES2, Mode=TwoWay, ValidatesOnDataErrors=True, ValidatesOnNotifyDataErrors=True, ValidatesOnExceptions=True}" Grid.Column="0" Height="30" x:Name="fEEXPE_RES2" Margin="-160,-1,9,1" />
-                <Label Content="Lugar Expedition" Grid.Column="1" Width="100" />
+                <Label Content="Lugar Exp." Grid.Column="1" Width="100" />
                 <Syncfusion:SfTextBoxExt 
                     Watermark="{Binding lpoblacion, Source={StaticResource ResourceLanguage}}"
                     karveControls:ControlExt.ItemChangedCommand="{Binding ItemChangedCommand}"
