--- a/src/Modules/BookingModule/Views/BookingControlView.xaml
+++ b/src/Modules/BookingModule/Views/BookingControlView.xaml
@@ -46,12 +46,14 @@
                 <ColumnDefinition></ColumnDefinition>
                 <ColumnDefinition></ColumnDefinition>
             </Grid.ColumnDefinitions>
+            <!--
             <Syncfusion:SfDataPager x:Name="BookingDataPager" 
 						   AccentBackground="DodgerBlue"
 						   NumericButtonCount="5"
 						   PageSize="20" 
                            Grid.Column="0"
 						   Source="{Binding SummaryView}" Visibility="Collapsed" />
+         
             <StackPanel x:Name="FirstLinePanel" Orientation="Horizontal" Grid.Column="1" Margin="200,0,0,0">
                 <Syncfusion:ComboBoxAdv x:Name="PagerSizeCombo"  DefaultText="20" Width="40" Background="Transparent" BorderBrush="Transparent" BorderThickness="0,0,0,0">
                     <Syncfusion:ComboBoxItemAdv>
@@ -61,25 +63,19 @@
                 </Syncfusion:ComboBoxAdv>
                 <TextBlock Margin="10,10,0,10" Text="{Binding lrowsperpage, Source={StaticResource ResourceLanguage}}" VerticalAlignment="Center" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
             </StackPanel>
+            -->
+            
             <Grid Grid.Column="2" VerticalAlignment="Center" Margin="100,0,0,0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
+                    <ColumnDefinition Width="Auto"></ColumnDefinition>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="{Binding lshowing, Source={StaticResource ResourceLanguage}}" Grid.Column="0" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
-                <TextBlock Text=" " Grid.Column="1"></TextBlock>
-                    <TextBlock Text="{Binding CounterInterval}" Grid.Column="1" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
-                <TextBlock Text=" " Grid.Column="1"></TextBlock>
-
-                <TextBlock Text="{Binding lof, Source={StaticResource ResourceLanguage}}" Grid.Column="2" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
-                <TextBlock Text=" " Grid.Column="1"></TextBlock>
-
-                <TextBlock Text="{Binding ItemCounts,Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
+                <TextBlock Margin="10,0,10,0" Text="{Binding lshowing, Source={StaticResource ResourceLanguage}}" Grid.Column="0" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
+                <TextBlock Margin="10,0,10,0" Text="{Binding CounterInterval}" Grid.Column="1" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
+                <TextBlock Margin="10,0,10,0" Text="{Binding lof, Source={StaticResource ResourceLanguage}}" Grid.Column="2" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
+                <TextBlock Margin="10,0,10,0" Text="{Binding ItemCounts,Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Grid.Column="3" FontWeight="Bold" FontFamily="Arial" Height="15"></TextBlock>
             </Grid>
         </Grid>
         <StackPanel Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Center">
@@ -262,7 +258,7 @@
                                            FilterPopupStyle="{StaticResource GenericCodeStyle}"
                                            AllowEditing="True"
                                            AllowGrouping="True" />
-                <Syncfusion:GridDateTimeColumn HeaderText="{Binding ldeparturehour, Source={StaticResource ResourceLanguage}}"
+                <Syncfusion:GridTextColumn HeaderText="{Binding ldeparturehour, Source={StaticResource ResourceLanguage}}"
                                                MappingName="DepartureHour"
                                                TextAlignment="Left"
                                                MinimumWidth="120"
@@ -288,7 +284,7 @@
                                                AllowEditing="True"
                                                AllowGrouping="True" />
 
-                <Syncfusion:GridDateTimeColumn HeaderText="Hora prevista retorno"
+                <Syncfusion:GridTextColumn HeaderText="Hora prevista retorno"
                                                MappingName="ReturnTime"
                                                TextAlignment="Left"
                                                MinimumWidth="120"
